[project]
name = "yuem-blind-watermark-fastapi"
version = "0.1.0"
description = "Internal FastAPI service for blind image watermark embedding and extraction."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anyio>=4.13.0",
    "blind-watermark==0.4.4",
    "fastapi[standard]==0.137.2",
    "invisible-watermark==0.2.0",
    "numpy>=2.4.0",
    "opencv-python-headless>=4.13.0.92",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pillow>=12.0.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.uv]
package = false
exclude-dependencies = ["opencv-python"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
